--- a/public/template/assets/css/templatemo-cyborg-gaming.css
+++ b/public/template/assets/css/templatemo-cyborg-gaming.css
@@ -25,7 +25,7 @@ Table of contents
 font & reset css
 --------------------------------------------- 
 */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue:wght@700&display=swap");
 /* 
 ---------------------------------------------
 reset
@@ -77,7 +77,7 @@ header, nav, section, article, aside, footer, hgroup {
 }
 
 html, body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Bebas Neue', sans-serif;
   font-weight: 400;
   background-color: #1e1e1e;
   font-size: 16px;
@@ -124,7 +124,7 @@ Global Styles
 html,
 body {
   background: #1f2122;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Bebas Neue', sans-serif;
 }
 
 body .page-content {
@@ -789,7 +789,7 @@ Banner Style
 }
 
 .main-banner h4 {
-  font-size: 45px;
+  font-size: 35px;
   text-transform: uppercase;
   margin-bottom: 25px;
 }
